# FIFA-world-cup-ai-intelligence

./: .env.example  .gitignore  LICENSE  README.md
backend/: pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/services/: __init__.py  football.py  prediction.py  world_cup_2026.py
backend/tests/: test_health.py  test_matches.py
docs/: ROADMAP.md
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: system-status.tsx
frontend/src/lib/: api.ts
